@@ -1,4 +1,4 @@
-Portions Copyright 2001,2002 Sun Microsystems, Inc.  
+Portions Copyright 2001-2004 Sun Microsystems, Inc.  
 Portions Copyright 1999-2001 Language Technologies Institute,
 Carnegie Mellon University.  
 All Rights Reserved.  Use is subject to license terms.
